testsuite/negative/Issue-git-0561.nnn
// E: can't parse file with extension 'nnn', parser not registered